--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -114,7 +114,40 @@ spec:
                 configMapKeyRef:
                   name: nacos-cm
                   key: mysql.param
-            {{else}}
+            {{- else eq .Values.nacos.storage.type "postgresql" }}
+            - name: SPRING_DATASOURCE_PLATFORM
+              value: "postgresql"
+            - name: MYSQL_SERVICE_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: nacos-cm
+                  key: mysql.db.host
+            - name: MYSQL_SERVICE_DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: nacos-cm
+                  key: mysql.db.name
+            - name: MYSQL_SERVICE_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: nacos-cm
+                  key: mysql.port
+            - name: MYSQL_SERVICE_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: nacos-cm
+                  key: mysql.user
+            - name: MYSQL_SERVICE_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: nacos-cm
+                  key: mysql.password
+            - name: MYSQL_SERVICE_DB_PARAM
+              valueFrom:
+                configMapKeyRef:
+                  name: nacos-cm
+                  key: mysql.param
+			{{else}}
             - name: EMBEDDED_STORAGE
               value: embedded
           {{end}}
